--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "db:push": "dotenv drizzle-kit push:mysql",
+    "db:push": "dotenv drizzle-kit push:pg",
     "db:studio": "dotenv drizzle-kit studio",
     "dev": "next dev",
     "lint": "next lint",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.5",
+    "@neondatabase/serverless": "^0.9.0",
     "@planetscale/database": "^1.11.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.0",
@@ -24,12 +25,15 @@
     "@vanilla-extract/css": "^1.14.0",
     "@vanilla-extract/next-plugin": "^2.3.2",
     "chart.js": "^4.4.0",
+    "clsx": "^2.1.0",
     "date-fns": "^2.30.0",
     "drizzle-orm": "^0.28.5",
+    "framer-motion": "^11.0.12",
     "next": "^14.0.0",
     "next-auth": "^4.24.4",
     "open-graph-scraper": "^6.3.2",
     "openai": "^4.26.0",
+    "pg": "^8.11.3",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
@@ -47,7 +51,6 @@
     "drizzle-kit": "^0.19.13",
     "eslint": "^8.47.0",
     "eslint-config-next": "^14.0.0",
-    "mysql2": "^3.6.1",
     "typescript": "^5.1.6"
   },
   "ct3aMetadata": {
